fixed overflow issue

--- a/css/Cards.css
+++ b/css/Cards.css
@@ -7,6 +7,7 @@
     border-radius: 0;
     padding: 1em;
     border: 1px solid white;
+    overflow: scroll;
 }
 
 .card a {
